syntax = "proto3";

option csharp_namespace = "Common.Proto";
import "google/protobuf/empty.proto";

service MessageExchange {
    rpc SendMessage (IntroduceMessageFromProto) returns (MessageFromproto);
    rpc ReceiveProcessedMessage (ProcessedMessageFromproto) returns (google.protobuf.Empty);
    rpc AliveCheckMessage(HeartBeat) returns (google.protobuf.Empty);
}


message IntroduceMessageFromProto  {
    string primaryId = 1;
    string engineType = 2;
}
message MessageFromproto {
    string primaryId = 1;
    string sender = 2;    
    string messageText = 3; 
}

message ProcessedMessageFromproto {
    string primaryId = 1;
    bool isValid = 2;     
    string engineType = 3; 
    int32 messageLength = 4; 
    map<string, string> regexFilter = 5;
}
message HeartBeat{
    string primaryId = 1;
    string timeCheck =2;
}