syntax = "proto3";

option csharp_namespace = "MessageService";

// تعریف سرویس gRPC برای MessageRouterSystem
service MessageRouterService {
    // ارسال جریان پیام‌ها به MessageProcessSystem
    rpc SendMessageStream (stream MessageRequest) returns (stream ValidationResponse);
}

// تعریف سرویس gRPC برای MessageProcessSystem
service MessageProcessService {
    // دریافت جریان پیام‌ها و ارسال نتایج اعتبارسنجی
    rpc ValidateMessageStream (stream MessageRequest) returns (stream ValidationResponse);
}

// تعریف پیام‌های مورد استفاده
message MessageRequest {
    string id = 1;         
    string sender = 2;       
    string message_text = 3; 
}

message ValidationResponse {
    string id = 1;            
    bool is_valid = 2;       
    string validation_message = 3; 
}